rpi5/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  serviceName: radarr
  template:
    metadata:
      name: radarr
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4@sha256:7dfd049e79c00b16fbc29c3f5d96a9e7b9e73a23930b4c5b3c4541d60b366814
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
#            - mountPath: /seedbox
#              name: seedbox
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: 7878
              path: /ping
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 7878
              path: /ping
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      securityContext:
        fsGroup: 3002
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
        - name: ca
          configMap:
            name: anshulg-ca
#        - name: seedbox
#          hostPath:
#            path: /seedbox
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
