rpi5/radarr/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  labels:
    app: oauth-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      name: oauth-proxy
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: oauth-proxy
    spec:
      imagePullSecrets:
        - name: docker-regcred
      containers:
        - name: oauth-proxy
          image: dhi.io/oauth2-proxy:7.15.5-debian13@sha256:451431faa1c8c40e7b1d08aa5fe760941d564102e214f935286f63bd38294aa1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4180
              protocol: TCP
              name: http
            - containerPort: 4443
              protocol: TCP
              name: https
          livenessProbe:
            httpGet:
              port: https
              path: /ping
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: https
              path: /ready
              scheme: HTTPS
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
            - mountPath: /certs
              name: tls
          securityContext:
            runAsGroup: 2000
      restartPolicy: Always
      volumes:
        - name: ca
          configMap:
            name: anshulg-ca
        - name: tls
          csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: rpi5-ca
              csi.cert-manager.io/dns-names: "radarr-auth.${POD_NAMESPACE}.svc.cluster.local,radarr-auth.${POD_NAMESPACE},radarr-auth"
              csi.cert-manager.io/fs-group: "2000"
              csi.cert-manager.io/duration: 720h0m0s
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-auth
spec:
  selector:
    app: oauth-proxy
  ports:
    - protocol: TCP
      port: 443
      targetPort: https
  type: ClusterIP
