rpi5/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 443
      targetPort: https
  type: ClusterIP
  clusterIP: None
